--- a/wm/.config/waybar/style.css
+++ b/wm/.config/waybar/style.css
@@ -58,7 +58,8 @@
     /* background: rgba(28,29,34,0); */
     /* font-family: FiraCode Nerd Font, Cantarell, Noto Sans, sans-serif; */
     /* font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan, Noto Sans, sans-serif; */
-    font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan;
+    /* font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan; */
+    font-family: monospace;
     font-size: 13px;
 }
 
@@ -152,7 +153,7 @@ window#waybar > box {
 #disk:hover,
 #clock:hover,
 #custom-spaceleft:hover,
-#custom-spaceright:hover,
+#custom-recorder:hover,
 #cpu:hover,
 #memory:hover,
 #custom-close:hover,
@@ -288,7 +289,7 @@ window#waybar > box {
     padding-left:10px;
     padding-right:10px;
     /* margin-top:5px; */
-    font-weight:bold;
+    /* font-weight:bold; */
     /* background: rgba(28,20,44,0.5) */
 
     
@@ -307,7 +308,7 @@ label {
 
 
 
-#custom-spaceright, #taskbar{
+#custom-recorder, #taskbar{
     /* background: #141834; */
     background : rgba(10,14,30,0.7);
     color:#bbbbbb;
