--- a/wm/.config/waybar/style.css
+++ b/wm/.config/waybar/style.css
@@ -57,16 +57,16 @@
     background:rgba(0,0,0,0);
     /* background: rgba(28,29,34,0); */
     /* font-family: FiraCode Nerd Font, Cantarell, Noto Sans, sans-serif; */
-    /* font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan, Noto Sans, sans-serif; */
+    font-family: JetBrains Mono Nerd Font, Kingnam Maiyuan, Noto Sans, sans-serif;
     /* font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan; */
-    font-family: monospace;
+    /* font-family: monospace; */
     font-size: 13px;
 }
 
 window#waybar > box {
     border-radius: 5px;
-    margin: 3px 3px 3px 3px;
-    margin: 0px 0px 4px 0px;
+    /* margin: 3px 3px 3px 3px; */
+    margin: 0px 0px 0px 0px;
     box-shadow: 0px 0px 3px #101010;
 }
 
@@ -112,7 +112,9 @@ window#waybar > box {
 #mode,
 #network,
 #pulseaudio,
+#wireplumber,
 #backlight,
+#idle_inhibitor,
 /* #tray , */
 #temperature
 {
@@ -157,6 +159,7 @@ window#waybar > box {
 #memory:hover,
 #custom-close:hover,
 #pulseaudio:hover,
+#wireplumber:hover,
 #backlight:hover
 {
     color:black;
