--- a/wm/waybar/style.css
+++ b/wm/waybar/style.css
@@ -12,23 +12,23 @@
 
 @keyframes blink-warning {
   70% {
-    color: white;
+    color: rgba(255, 255, 255, 0.9);
   }
 
   to {
-    color: white;
-    background-color: orange;
+    color: rgba(255, 255, 255, 0.9);
+    background-color: #FF9F0A;
   }
 }
 
 @keyframes blink-critical {
   70% {
-    color: white;
+    color: rgba(255, 255, 255, 0.9);
   }
 
   to {
-    color: white;
-    background-color: red;
+    color: rgba(255, 255, 255, 0.9);
+    background-color: #FF453A;
   }
 }
 
@@ -38,8 +38,6 @@
 
 /* Reset all styles */
 * {
-  /* background:rgba(10,10,10,0.4); */
-  /* background:rgba(200,200,200,0.4); */
   border: none;
   border-radius: 0;
   min-height: 0;
@@ -49,54 +47,29 @@
 
 /* The whole bar */
 #waybar {
-  color: white;
-  /* background: #002c34; */
-  /* background: #aaaaee; */
-  background: rgba(0, 0, 0, 0);
-  /* background: rgba(28,29,34,0); */
-  /* font-family: FiraCode Nerd Font, Cantarell, Noto Sans, sans-serif; */
+  color: rgba(255, 255, 255, 0.9);
+  /* background: rgba(79, 79, 79, 0.6); */
+  background: rgba(0, 0, 0, 0.4);
   font-family: JetBrains Mono Nerd Font, Kingnam Maiyuan, Noto Sans, sans-serif;
-  /* font-family: JetBrainsMono Nerd Font, Kingnam Maiyuan; */
-  /* font-family: monospace; */
   font-size: 13px;
 }
 
 window#waybar > box {
-  border-radius: 5px;
-  /* margin: 3px 3px 3px 3px; */
   margin: 0px 0px 0px 0px;
-  box-shadow: 0px 0px 3px #101010;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
 
-/* #custom-close:hover */
-/* { */
-/*     background: inherit; */
-/*     color:black; */
-/* } */
-/* @keyframes blink-close{ */
-/*     from {color:blue} */
-/*     to{color:red} */
-/* } */
-/**/
-/* #custom-close  */
-/* { */
-/*     background:black; */
-/*     border-bottom: 3px solid yellow; */
-/*     animation-duration: 1s; */
-/*     animation-iteration-count: infinite; */
-/* 	animation-direction: alternate; */
-/*     animation-name: blink-close; */
-/* } */
+window.modules-right {
 
-/* #custom-close label */
-/* { */
-/*     border-bottom: 3px solid white; */
-/*     background:white; */
-/*     color:black; */
-/*     font-weight: bold; */
-/*     padding-left: 8px; */
-/*     padding-right: 8px; */
-/* } */
+}
+
+window.modules-center {
+
+}
+
+window.modules-left {
+
+}
 
 #disk,
 #battery,
@@ -111,53 +84,27 @@ window#waybar > box {
 #wireplumber,
 #backlight,
 #idle_inhibitor,
-/* #tray , */
+#tray,
 #temperature {
-  /* background: #141834; */
-  background: #aaaaee;
-  background: rgba(176, 176, 238, 0.6);
-  color: black;
+  color: rgba(255, 255, 255, 0.9);
   font-weight: bold;
   /* background: rgba(14,18,34,0.2); */
   /* background: rgba(0,0,0,0.1); */
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 4px;
+  padding-right: 4px;
   /* margin-top:5px; */
 }
 
-/* Each module */
-/* css也设置一下 */
-#custom-asd2num {
-  /* background: #141834; */
-  background: #aaaaee;
-  background: rgba(193, 193, 255, 0.7);
-  color: black;
-  font-weight: bold;
-  /* font-weight:bold; */
-  /* background: rgba(14,18,34,0.2); */
-  /* background: rgba(0,0,0,0.1); */
-  padding-left: 8px;
-  padding-right: 8px;
-  /* margin-top:5px; */
-}
-#custom-close {
-  color: white;
-  padding: 0px 9px 0px 8px;
-  /* margin-right:8px; */
-}
 #disk:hover,
 #clock:hover,
 #cpu:hover,
 #memory:hover,
-#custom-close:hover,
-#pulseaudio:hover,
 #wireplumber:hover,
 #backlight:hover {
   color: black;
-  background: #11cccc;
+  background: #0A84FF;
   box-shadow: inherit;
   text-shadow: inherit;
-  /* background: red; */
 }
 
 #disk {
@@ -224,13 +171,6 @@ window#waybar > box {
   animation-duration: 2s;
 }
 
-#mode {
-  background: #64727d;
-  border-top: 2px solid white;
-  /* To compensate for the top border and still have vertical centering */
-  padding-bottom: 2px;
-}
-
 #network {
   /* No styles */
 }
@@ -247,10 +187,6 @@ window#waybar > box {
   /* No styles */
 }
 
-#custom-spotify {
-  color: rgb(102, 220, 105);
-}
-
 #temperature {
   /* No styles */
 }
@@ -261,65 +197,29 @@ window#waybar > box {
 
 #tray {
   /* No styles */
-  /* background: rgba(0,0,0,0.5); */
-  /* background:#141834; */
-  /* background: #9999ee; */
-  background: rgba(176, 176, 238, 0.4);
-
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 2px;
-  /* border-radius: 0px 5px 5px 0px; */
-  /* margin-top:5px; */
-  /* margin-right:5; */
-  /* background: blue; */
 }
 
 #window {
   /* text-align:center; */
   padding-left: 10px;
   padding-right: 10px;
-  /* margin-top:5px; */
-  /* font-weight:bold; */
-  /* background: rgba(28,20,44,0.5) */
-
-  /* font-weight: bold; */
 }
-
-/* button { */
-/*     color: white; */
-/**/
-/* } */
 
 label {
   all: unset;
 }
 
-#custom-recorder,
 #taskbar {
-  /* background: #141834; */
-  background: rgba(10, 14, 30, 0.7);
-  color: #bbbbbb;
   padding-left: 6px;
   padding-right: 6px;
   border-radius: 0px 0px 0px 0px;
-  /* margin-top:5px; */
 }
 
-#custom-spaceleft {
-  /* background: #141834; */
-  background: rgba(10, 14, 30, 0.7);
+#taskbar button {
   color: #65dbff;
-  padding-left: 8px;
-  padding-right: 8px;
-  /* border-radius: 5px 0px 0px 5px; */
-  /* margin-top:5px; */
-  /* margin-left:5px; */
 }
 
 #workspaces {
-  /* margin-top:5px; */
-  /* margin-left:5px; */
 }
 #workspaces button {
   /* To compensate for the top border and still have vertical centering */
@@ -327,49 +227,25 @@ label {
   font-size: 20px;
   padding-left: 6px;
   padding-right: 6px;
-  /* margin-bottom:-2; */
-  /* margin-top:2; */
-  /* background: #141834; */
-  background: rgba(10, 14, 30, 0.7);
-  /* font-weight:bold; */
-  color: #65dbff;
-  /* border-bottom:2px solid rgba(0,0,0,0); */
-  /* border-top:2px solid rgba(0,0,0,0); */
-  /* border-bottom:10px solid white; */
+  /* background: rgba(10, 14, 30, 0.7); */
+  color: rgba(255, 255, 255, 0.9);
 }
 
 #workspaces button.active {
-  color: #ffffff;
-  /* background: #141834; */
-  /* background-color: #282c34; */
-  /* background:#aaaade; */
-  background: #444874;
-  color: white;
-  /* font-weight:bold; */
-  /* border-bottom: 2px solid white;  */
+  background: rgba(10, 14, 30, 0.7);
+  color: rgba(255, 255, 255, 0.9);
 }
 #workspaces button:hover {
-  /* color: #ffffff; */
-  /* background: #141834; */
-  /* background-color: #282c34; */
-  /* background:#aaaade; */
-  background: cyan;
-  color: black;
+  background: rgba(10, 14, 30, 0.7);
+  color: rgba(255, 255, 255, 0.9);
   /* font-weight:bold; */
   box-shadow: inherit;
   text-shadow: inherit;
-  /* border-bottom: 2px solid white;  */
+  /* border-bottom: 2px solid rgba(255, 255, 255, 0.9);  */
 }
 
-/* #workspaces button.focused { */
-/*     color: #ffffff; */
-/*     background-color: #282c34; */
-/*     background: #343864; */
-/*     font-weight:bold; */
-/*     border-top: 2px solid white;  */
-/* } */
 #workspaces button.hidden {
-  background: green;
+  background: #32D74B;
   color: black;
 }
 
