--- a/wm/waybar/style.css
+++ b/wm/waybar/style.css
@@ -231,6 +231,7 @@ label {
   color: rgba(255, 255, 255, 0.9);
 }
 
+#workspaces button.focused,
 #workspaces button.active {
   background: rgba(10, 14, 30, 0.7);
   color: rgba(255, 255, 255, 0.9);
