--- a/wm/waybar/style.css
+++ b/wm/waybar/style.css
@@ -50,7 +50,7 @@
   color: rgba(255, 255, 255, 0.9);
   /* background: rgba(79, 79, 79, 0.6); */
   background: rgba(0, 0, 0, 0.4);
-  font-family: JetBrains Mono Nerd Font, Kingnam Maiyuan, Noto Sans, sans-serif;
+  font-family: monospace, sans-serif;
   font-size: 13px;
 }
 
