--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,11 +1,3 @@
-/* =============================================================================
- *
- * Waybar configuration
- *
- * Configuration reference: https://github.com/Alexays/Waybar/wiki/Configuration
- *
- * =========================================================================== */
-
 /* -----------------------------------------------------------------------------
  * Keyframes
  * -------------------------------------------------------------------------- */
@@ -51,7 +43,7 @@
   background-color: rgba(0, 0, 0, 0.4);
   background-image: url("$HOME/.config/waybar/Blur.png");
   font-family: sans, monospace;
-  font-size: 13px;
+  font-size: 16px;
   font-weight: Bold;
 }
 
@@ -110,6 +102,10 @@ window#waybar > box {
   animation-direction: alternate;
 }
 
+#battery.charging {
+  color: blue;
+}
+
 #battery.warning {
   color: orange;
 }
@@ -129,6 +125,7 @@ window#waybar > box {
 }
 
 #clock {
+    font-size: 14px;
   font-weight: bold;
 }
 
@@ -213,7 +210,6 @@ label {
   font-size: 20px;
   padding-left: 6px;
   padding-right: 6px;
-  /* background: rgba(10, 14, 30, 0.7); */
   color: rgba(255, 255, 255, 0.9);
 }
 
@@ -228,7 +224,6 @@ label {
   /* font-weight:bold; */
   box-shadow: inherit;
   text-shadow: inherit;
-  /* border-bottom: 2px solid rgba(255, 255, 255, 0.9);  */
 }
 
 #workspaces button.hidden {
@@ -240,3 +235,5 @@ label {
   background: #141834;
   color: #c9545d;
 }
+
+/* vim: set st=4 noet: */
