--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,176 +1,131 @@
 * {
-    border: none;
-    border-radius: 0px;
-    font-family: "monospace";
-    font-weight: bold;
-    font-size: 14px;
-    min-height: 10px;
+    text-shadow: none;
 }
 
-@import "theme.css";
-
 window#waybar {
-    background: @bar-bg;
+    /* Large size for shorter side padding*/
+    /* border-radius: 100px */
+    background-color: transparent;
+}
+
+.modules-left {
+    border-radius: 100px;
+    background-color: rgba(18, 18, 18, 1.0);
+    padding: 0 8px;
+}
+
+.modules-center {
+    border-radius: 100px;
+    background-color: rgba(18, 18, 18, 1.0);
+}
+
+.modules-right {
+    border-radius: 100px;
+    background-color: rgba(18, 18, 18, 1.0);
+    padding: 0 8px;
 }
 
 tooltip {
-    background: @main-bg;
-    color: @main-fg;
-    border-radius: 7px;
-    border-width: 0px;
+    background-color: rgba(18, 18, 18, 1.0);
+    border: 1px solid rgba(34, 34, 34, 0.5);
+    border-radius: 8px;
+
+    font-family: "Inconsolata SemiBold", "Symbols Nerd Font";
+    font-size: 13px;
+}
+
+#clock,
+#cpu,
+#memory,
+#network,
+#pulseaudio,
+#tray,
+#mode,
+#window,
+#workspaces {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px 6px 0px 6px;
+    background-color: transparent;
+
+    font-family: "Inconsolata SemiBold", "Symbols Nerd Font";
+    font-size: 13px;
+}
+
+#workspaces {
+    /* border: rgba(255, 255, 255, 0.2) solid 2px; */
+    padding: 4px 12px;
+
+    transition-property: background, color, border;
+    transition-duration: 0.2s;
 }
 
 #workspaces button {
-    box-shadow: none;
-	text-shadow: none;
-    padding: 0px;
-    border-radius: 9px;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    margin-left: 0px;
-    padding-left: 3px;
-    padding-right: 3px;
-    margin-right: 0px;
-    color: @main-fg;
-    animation: ws_normal 20s ease-in-out 1;
-}
+    border: none;
+    border-radius: 0px;
+    padding: 0px 0px;
+    background: transparent;
+    color: #ffffff;
+    margin: 0 4px;
+    min-width: 24px;
 
-#workspaces button.active {
-    background: @wb-act-bg;
-    color: @wb-act-fg;
-    margin-left: 3px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-right: 3px;
-    animation: ws_active 20s ease-in-out 1;
-    transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
+    transition-property: background, color, border, margin, padding;
+    transition-duration: 0.2s;
 }
 
 #workspaces button:hover {
-    background: @wb-hvr-bg;
-    color: @wb-hvr-fg;
-    animation: ws_hover 20s ease-in-out 1;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+    /* background: rgba(255, 255, 255, 0.5); */
+    color: rgba(255, 255, 255, 0.5);
 }
 
-#taskbar button {
-    box-shadow: none;
-	text-shadow: none;
-    padding: 0px;
-    border-radius: 9px;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    margin-left: 0px;
-    padding-left: 3px;
-    padding-right: 3px;
-    margin-right: 0px;
-    color: @wb-color;
-    animation: tb_normal 20s ease-in-out 1;
+#workspaces button.empty {
+    color: rgba(255, 255, 255, 0.25);
 }
 
-#taskbar button.active {
-    background: @wb-act-bg;
-    color: @wb-act-color;
-    margin-left: 3px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-right: 3px;
-    animation: tb_active 20s ease-in-out 1;
-    transition: all 0.4s cubic-bezier(.55,-0.68,.48,1.682);
+#workspaces button.active {
+    /* background: #ffffff; */
+    color: #ffffff;
+    border-bottom: 3px solid #ffffff;
+    margin-bottom: 1px;
+    /* padding: 0 4px; */
 }
 
-#taskbar button:hover {
-    background: @wb-hvr-bg;
-    color: @wb-hvr-color;
-    animation: tb_hover 20s ease-in-out 1;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+#workspaces button.urgent {
+    color: #eb4d4b;
+    border-bottom: 3px solid #eb4d4b;
 }
 
-#tray menu * {
-    min-height: 16px
+#mode {
+    background-color: #64727D;
+    border-bottom: 3px solid #ffffff;
 }
 
-#tray menu separator {
-    min-height: 10px
+#clock {
+    color: #eefff1;
 }
 
-#backlight,
-#battery,
-#bluetooth,
-#custom-cliphist,
-#clock,
-#custom-cpuinfo,
-#cpu,
-#custom-gpuinfo,
-#idle_inhibitor,
-#custom-keybindhint,
-#language,
-#memory,
-#mpris,
-#network,
-#custom-notifications,
-#custom-power,
-#pulseaudio,
-#custom-spotify,
-#taskbar,
-#custom-theme,
-#tray,
-#custom-updates,
-#custom-wallchange,
-#custom-wbar,
-#window,
-#workspaces,
-#custom-l_end,
-#custom-r_end,
-#custom-sl_end,
-#custom-sr_end,
-#custom-rl_end,
-#custom-rr_end {
-    color: @main-fg;
-    background: @main-bg;
-    opacity: 1;
-    margin: 4px 0px 4px 0px;
-    padding-left: 4px;
-    padding-right: 4px;
+#cpu {
+    color: #FE968B;
 }
 
-#workspaces,
-#taskbar {
-    padding: 0px;
+#memory {
+    color: #FFEAAA;
 }
 
-#custom-r_end {
-    border-radius: 0px 21px 21px 0px;
-    margin-right: 9px;
-    padding-right: 3px;
+#pulseaudio {
+    color: #a4e4fe;
 }
 
-#custom-l_end {
-    border-radius: 21px 0px 0px 21px;
-    margin-left: 9px;
-    padding-left: 3px;
+#network {
+    color: #b0f5e5;
 }
 
-#custom-sr_end {
-    border-radius: 0px;
-    margin-right: 9px;
-    padding-right: 3px;
+#tray {
+    /* border: rgba(255, 255, 255, 0.2) solid 2px; */
+    color: transparent;
 }
 
-#custom-sl_end {
-    border-radius: 0px;
-    margin-left: 9px;
-    padding-left: 3px;
-}
-
-#custom-rr_end {
-    border-radius: 0px 7px 7px 0px;
-    margin-right: 9px;
-    padding-right: 3px;
-}
-
-#custom-rl_end {
-    border-radius: 7px 0px 0px 7px;
-    margin-left: 9px;
-    padding-left: 3px;
+#window {
+    color: #e6f2d6;
+    margin-left: 4px;
 }
