--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -51,9 +51,8 @@
 #waybar {
 	color: rgba(255, 255, 255, 1.0);
 	background-color: rgba(0, 0, 0, 0.7);
-	font-family: monospace;
+	font-family: "monospace";
 	font-size: 14px;
-	font-weight: Bold;
 }
 
 window#waybar>box {
