--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -48,9 +48,9 @@
 }
 
 /* The whole bar */
-#waybar {
+window#waybar {
 	color: rgba(255, 255, 255, 1.0);
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(79, 79, 79, 0.2);
 	font-family: "monospace";
 	font-size: 14px;
 }
@@ -60,28 +60,8 @@ window#waybar>box {
 	box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
 
-#disk,
-#battery,
-#clock,
-#cpu,
-#custom-keyboard-layout,
-#memory,
-#mode,
-#network,
-#bluetooth,
-#pulseaudio,
-#wireplumber,
-#backlight,
-#idle_inhibitor,
-#tray,
-#temperature {
-	color: rgba(255, 255, 255, 0.9);
-	font-weight: bold;
-	/* background: rgba(14,18,34,0.2); */
-	/* background: rgba(0,0,0,0.1); */
-	padding-left: 4px;
-	padding-right: 4px;
-	/* margin-top:5px; */
+window#waybar .module {
+  margin: 0 2px;
 }
 
 #disk:hover,
@@ -201,8 +181,8 @@ label {
 }
 
 #taskbar {
-	padding-left: 6px;
-	padding-right: 6px;
+	padding-left: 2px;
+	padding-right: 2px;
 	border-radius: 0px 0px 0px 0px;
 }
 
